--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,6 +225,10 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
+      <product></product>
+      <app-user></app-user>
+      <app-productv2></app-productv2>
+      <app-productlist></app-productlist>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
