--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -227,7 +227,8 @@
       </svg>
       <product></product>
       <app-user></app-user>
-      <app-productv2></app-productv2>
+      <app-productv2 name="samsung" price="20000" abcEvent="parentFunctionf1($event)"></app-productv2>
+      <app-productv2 name="Apple" price="90000"></app-productv2>
       <app-productlist></app-productlist>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
