--- a/src/app/productlistv4/productlistv4.component.html
+++ b/src/app/productlistv4/productlistv4.component.html
@@ -25,11 +25,12 @@
                 <td> {{prod.title}}</td>
                 <td> {{prod.price}}</td>
                 <td> <img src="{{prod.thumbnail}}" width="100" height="100"></td>
+                <td><a [routerLink]="['/product', prod.id]"></a></td>
             </tr>
 
         </table>
     </div>
-     
+     <!--*ngIf="products.length>0;else elseBlock"-->
     <ng-template #elseBlock> No products on Sale!! Visit a day later. </ng-template >
 
     <!-- <div *ngIf="products.length==0">
