--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <main class="main">
-  <ul class="horizontal-nav">
+  <!--ul class="horizontal-nav">
     <li><a [routerLink]="['/home']">Home</a></li>
     <li><a [routerLink]="['/product-list']">Product List</a></li>
     <li><a [routerLink]="['/add-product']">Add New Product</a></li>
-  </ul>
+  </ul-->
+  <app-product-v3></app-product-v3>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
